--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B6B3B3"
     tools:context=".SecondActivity">
 
     <TextView
@@ -15,6 +16,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:padding="8dp"
+        android:background="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
@@ -31,7 +34,10 @@
         android:layout_marginBottom="312dp"
         android:ems="10"
         android:hint="Message"
+        android:padding="8dp"
+        android:textColor="@android:color/black"
         android:inputType="textEmailAddress"
+        android:background="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -43,9 +49,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:padding="8dp"
         android:ems="10"
+        android:background="@drawable/button_background"
         android:hint="Phone Number"
         android:inputType="number"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/editText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -60,6 +69,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
         android:text="Save"
+        android:padding="8dp"
+        android:background="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
